# chatbot-ai-systems-production

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  error_summary.txt  ollama_tags.json  phase_1.1.md  phase_1.3.md  phase_5_5_verification_report.md  pyproject.toml  requirements.txt  system_test_log.md
alembic/: env.py
alembic/versions/: 0cd94ce50f5b_add_media_attachments_table.py  3f0f4f48aa41_add_summary_columns.py  74a9f48b0dab_add_embedding_column.py  90fff2956014_add_observability_columns.py  a4a37dd1410f_initial_schema.py
docker/: Dockerfile.backend  Dockerfile.frontend
docker/grafana/dashboards/: chatbot_overview.json
docker/prometheus/: prometheus.yml  rules.yml
docs/: MCP_SETUP.md  database_flow_analysis_2.0.md  database_flow_analysis_2.5.md  phase_1.1.md  phase_1.2.md  phase_2.0.md  phase_2.2.md  phase_2.5.md  phase_3.0.md  phase_4.0.md  phase_4.1.md  phase_5.0.md  phase_5.5.md  phase_6.0.md  phase_6.5.md
frontend/: .env.example  .env.local  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatArea.tsx  ChatInput.tsx  Header.tsx  InputBar.tsx  MessageBubble.tsx  Sidebar.tsx
frontend/hooks/: useUpload.ts  useVoice.ts
scripts/: debug_greeting.py  debug_websocket.py  generate_traffic.py  inspect_mcp_tools.py  run_system_test.py  test_agentic_flow.py  test_all_pipelines.py  test_mcp_capabilities.py  test_media_pipeline.py  test_multimodal.py  test_orchestrator_flow.py  test_persistence.py  test_phase_6_5_queries.py  test_scenarios.py  test_ws_streaming.py  validate_db_flow.py  validate_mcp_comprehensive.py  verify_api.py  verify_decision_discipline.py  verify_mcp.py  verify_observability.py  verify_phase_5_5_levels.py  verify_phase_5_5_real.py  verify_phase_6_0.py  verify_phase_6_5.py
src/chatbot_ai_system/: __init__.py  orchestrator.py
src/chatbot_ai_system/config/: mcp_server_config.py  settings.py
tests/: mock_mcp_server.py  test_mcp_config.py  test_mcp_integration.py  test_redis.py  test_tools_integration.py
(+32 files in other folders)
