[tool.poetry]
name = "chatbot-ai-system"
version = "0.1.0"
description = "Production-grade AI chatbot system with multi-provider LLM support"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "chatbot_ai_system", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
websockets = "^12.0"
prometheus-fastapi-instrumentator = "^7.0.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pgvector = "^0.2.4"
mcp = "^1.20.0"
prometheus-client = "^0.19.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
